fix: prevent NESP nav tab overlap

--- a/main.css
+++ b/main.css
@@ -100,7 +100,7 @@ a:hover
     background: #6c94eb;
     color: #fff;
     clear: both;
-    padding-top: 1.6em; /* Affects the height of the sub-tab bar; was 2em. */
+    padding-top: 0px;
     min-height: 400px;
     height: auto !important;
     height: 400px;
@@ -135,39 +135,55 @@ a:hover
 
 #header
 {
+    clear: both;
     position: relative;
-    height: 2em;
+    height: auto;
+    min-height: 2em;
 }
 
 #header ul#primary
 {
     margin: 0px;
     padding: 0px;
-    position: absolute;
-    bottom: -1px;
-    width: 80em;
+    position: static;
+    width: auto;
     font: normal normal normal 12px Arial, Tahoma, sans-serif;
+    display: flex;
+    flex-wrap: wrap;
+    align-items: flex-end;
+    gap: 3px;
 }
 
 #header ul#primary li
 {
-    display: inline;
+    display: block;
     list-style: none;
+}
+
+#header ul#primary > li
+{
+    display: contents;
 }
 
 /* Inactive Tab */
 #header ul#primary a.inactive
 {
-    background: #E2E2E2 url(images/tabs/inactive.jpg) no-repeat;
+    background: #E2E2E2;
     align-items: center;
+    border: 1px solid #aaa;
+    border-bottom-color: #666;
+    border-radius: 7px 7px 0px 0px;
     box-sizing: border-box;
+    flex: 0 0 auto;
     justify-content: center;
-    height: 21px;
-    width: 81px;
-    margin: 3px 3px 0px 0px; /* 1px more margin-left than a.active. */
+    min-height: 21px;
+    min-width: 70px;
+    width: auto;
+    margin: 3px 0px 0px 0px;
+    padding: 3px 12px 2px 12px;
     text-align: center;
     text-decoration: none;
-    float: left;
+    float: none;
     line-height: normal;
     color: #000;
     display: flex;
@@ -178,24 +194,30 @@ a:hover
 /* Inactive Tab Hover */
 #header ul#primary a.inactive:hover
 {
-    margin-top: 1px;
+    background: #f0f0f0;
     border-color: #666;
-    padding-bottom: 2px;
+    text-decoration: none;
 }
 
 /* Active Tab */
 #header ul#primary a.active
 {
-    background: #E2E2E2 url(images/tabs/active.jpg) no-repeat;
+    background: #6c94eb;
     align-items: center;
+    border: 1px solid #666;
+    border-bottom-color: #6c94eb;
+    border-radius: 7px 7px 0px 0px;
     box-sizing: border-box;
+    flex: 0 0 auto;
     justify-content: center;
-    height: 24px;
-    width: 81px;
-    margin: 1px 2px 0px 0px;
+    min-height: 24px;
+    min-width: 70px;
+    width: auto;
+    margin: 0px;
+    padding: 4px 12px 3px 12px;
     text-align: center;
     text-decoration: none;
-    float: left;
+    float: none;
     color: #fff;
     display: flex;
     line-height: normal;
@@ -209,17 +231,36 @@ a:hover
     text-decoration: none;
 }
 
+#header ul#primary a.inactive:focus,
+#header ul#primary a.active:focus
+{
+    outline: 2px solid #315f93;
+    outline-offset: 2px;
+}
+
 /* Secondary "Tab" Row*/
 #header ul#secondary
 {
-    position: absolute;
+    position: static;
     margin: 0px;
-    padding: 0px;
-    bottom: -1.9em;
-    left: 1px;
-    width: 65em;
+    padding: 0px 4px;
+    width: 100%;
     font: normal normal normal 12px Arial, Tahoma, sans-serif;
     min-height: 24px;
+    background: #6c94eb;
+    border-left: 1px solid #666;
+    border-right: 1px solid #666;
+    box-sizing: border-box;
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center;
+    gap: 0px;
+}
+
+#header ul#secondary li
+{
+    display: block;
+    list-style: none;
 }
 
 /* Inactive Secondary "Tab" */
@@ -229,14 +270,15 @@ a:hover
     text-align: center;
     display: flex;
     border: none;
-    float: left;
+    box-sizing: border-box;
+    float: none;
     width: auto;
-    min-height: 18px;
-    padding: 3px 10px 2px 10px;
-    margin: 3px 0px 0px 0px;
+    min-height: 24px;
+    padding: 4px 10px;
+    margin: 0px;
     border-right: 1px dotted #aaa;
     color: #f4f4f4;
-    line-height: 14px;
+    line-height: normal;
     text-decoration: underline;
     white-space: nowrap;
 }
@@ -255,14 +297,21 @@ a:hover
     width: auto;
     display: flex;
     border: none;
-    float: left;
-    min-height: 18px;
-    padding: 3px 10px 2px 10px;
-    margin: 3px 0px 0px 0px;
+    box-sizing: border-box;
+    float: none;
+    min-height: 24px;
+    padding: 4px 10px;
+    margin: 0px;
     border-right: 1px dotted #aaa;
     color: #ccc;
-    line-height: 14px;
+    line-height: normal;
     white-space: nowrap;
+}
+
+#header ul#secondary li a:focus
+{
+    outline: 2px solid #fff;
+    outline-offset: -2px;
 }
 
 /* The last secondary "tab". */
